Fix wrong margin on post show title

--- a/app/assets/stylesheets/elements/_items.scss
+++ b/app/assets/stylesheets/elements/_items.scss
@@ -175,11 +175,12 @@
 
   .item--single & {
     @include responsive-font-width(32px, map-get($media-min-widths, lg), 24px);
-    padding: ($margin / 6) 0;
+    padding: $margin / 6 0;
     line-height: 1.5em;
 
     @include media-min(sm) {
       margin-right: $margin / 3;
+      margin-bottom: 0;
     }
   }
 
